Task ID: #006 - Display the Order History

--- a/Android/app/src/main/res/values-es/strings.xml
+++ b/Android/app/src/main/res/values-es/strings.xml
@@ -129,4 +129,6 @@
         <item>Usando Machine Learning&#8230;</item>
         <item>Contando frijoles&#8230;</item>
     </string-array>
+
+    <string name="price">$%1$s.</string>
 </resources>
